--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "cross-env NODE_ENV=test jest --runInBand",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "prisma": "npx prisma generate --schema prisma/schema.postgres.prisma & npx prisma generate --schema prisma/schema.mongodb.prisma"
+    "prisma:postgres": "npx prisma migrate dev --schema=prisma/schema.postgres.prisma --name init",
+    "prisma:mongodb": "npx prisma db push --schema=prisma/schema.mongodb.prisma"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
+    "sed": "^0.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
